<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_tramites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tramites" />

    <Button
        android:id="@+id/btn_servicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicios" />

    <Button
        android:id="@+id/btn_reportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportes" />

</LinearLayout>