<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_reporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_tu_reporte_aqui" />

    <Button
        android:id="@+id/btn_enviar_reporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_reporte" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras" />

</LinearLayout>