<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_cola_virtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cola_virtual" />

    <Button
        android:id="@+id/btn_descuentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descuentos" />

    <Button
        android:id="@+id/btn_estado_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_de_cuenta" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atras" />

</LinearLayout>