<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escriba_su_curp_aqui" />

    <EditText
        android:id="@+id/et_curp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escriba_su_curp_aqui"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras" />

</LinearLayout>